# kiro-web-like

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: mcp.py  skills.py
src/: __init__.py  agent.py  agents_config.py  auth.py  config.py  kiro_session.py  mcp_config.py  skills_config.py  workspace.py
